Added mobile-spec tests as option to run and fixed a few things.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -72,6 +72,9 @@
         <li dojoType="dojox.mobile.ListItem" onclick="loadPage('screens/storage.html');">
             <div class="mblListItemTextBox">Storage</div><div class="mblArrow"></div>
         </li>
+        <li dojoType="dojox.mobile.ListItem" onclick="loadPage('test/index.html');">
+            <div class="mblListItemTextBox">Tests</div><div class="mblArrow"></div>
+        </li>
         <!-- li dojoType="dojox.mobile.ListItem">
             <div dojoType="com.ibm.swgtc.Accelerometer" label="My Button"></div>
         </li -->
