Added images for camera API.

--- a/WebContent/screens/camera.html
+++ b/WebContent/screens/camera.html
@@ -122,7 +122,7 @@
             <li dojoType="dojox.mobile.ListItem" class="mblVariableHeight">
                 <div id="camera_status"></div>
                 <div dojoType="dojox.mobile.RoundRect">
-                    <img style="width:120px;height:120px;" s2="visibility:hidden;display:none;" id="camera_image" src="../ibm-logo.jpg" />
+                    <img style="height:120px;" s2="visibility:hidden;display:none;" id="camera_image" src="../ibm-logo.jpg" />
                 </div>
         </ul>
         <h2 class="mblHeading">Action</h2>
