Use window.postMessage() for communication between frames.  Modularlize simulation support.  Still need to complete migration for contacts and file.

--- a/WebContent/screens/accelerometer.html
+++ b/WebContent/screens/accelerometer.html
@@ -126,6 +126,9 @@
         		alert("Error: PhoneGap did not initialize.  Demo will not run correctly.");
         	}
         },1000);
+        document.addEventListener("pause", function() {console.log("*** PAUSE RECEIVED In ACCEL.HTML ***");}, false);
+        document.addEventListener("online", function() {console.log("*** ONLINE RECEIVED In ACCEL.HTML ***");}, false);
+        document.addEventListener("offline", function() {console.log("*** OFFLINE RECEIVED In ACCEL.HTML ***");}, false);
     }
 
 </script>
