Added battery API support.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,6 +28,9 @@
         <li dojoType="dojox.mobile.ListItem" onclick="loadPage('screens/audio.html');">
             <div class="mblListItemTextBox">Audio Player/Recorder</div><div class="mblArrow"></div>
         </li>
+        <li dojoType="dojox.mobile.ListItem" onclick="loadPage('screens/battery.html');">
+            <div class="mblListItemTextBox">Battery</div><div class="mblArrow"></div>
+        </li>
         <li dojoType="dojox.mobile.ListItem" onclick="loadPage('screens/camera.html');">
             <div class="mblListItemTextBox">Camera</div><div class="mblArrow"></div>
         </li>
