Updating contacts implementation

--- a/WebContent/sim/contacts.html
+++ b/WebContent/sim/contacts.html
@@ -1,1 +1,2 @@
-Not implemented yet.
+<div id="contactsContainer"></div>
+<button dojoType="dijit.form.Button" type="button" onClick="populateContacts();">Refresh</button>
